--- a/src/container/User/User.module.css
+++ b/src/container/User/User.module.css
@@ -4,7 +4,11 @@
 }
 
 .img{
-    height: 120px;
+    width: 150px; /* width of container */
+    height: 150px; /* height of container */
+    object-fit: cover;
+    padding: 1px;
+    background-color:#FFF1D6 ;
     border-radius: 100px;
     border: 3px solid orange;
 }
