--- a/src/container/Auth/Signup/Signup.module.css
+++ b/src/container/Auth/Signup/Signup.module.css
@@ -1,5 +1,3 @@
-
-
 body{
     background-image: url('../../../images/auth.jpg');
     /* position: absolute; */
@@ -41,6 +39,10 @@ body{
     cursor: pointer;
 }
 
+.login:hover{
+    color: orange;
+}
+
 .signup{
     text-align: center;
 }
@@ -67,6 +69,13 @@ form {
 
 .pass{
     border-radius: 0px 0px 10px 10px;
+}
+
+.namee{
+    width: 200px;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
 }
 
 .button{
