--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -38,11 +38,20 @@
     height: 250px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
+    transition: all 0.5s;
+}
+
+.post_img:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+    box-shadow: 0 10px 120px 0 rgba(0, 0, 0, 0.37);
 }
 
 .title{
     font-size: 1.2em;
     padding: 10px 0px 0px 0px;
+    font-weight: bold;
+    color: rgb(68, 68, 68);
 }
 
 .body{
@@ -90,4 +99,10 @@
 .delete{
     color: red;
     cursor: pointer;
+}
+
+.content{
+    border-bottom: 1px solid rgb(201, 201, 201);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
