--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,8 +1,8 @@
 .post{
     border-left: 2px solid orange;
     padding: 15px;
-    margin: 15px;
-    padding: 20px;
+    margin: 55px 15px;
+    padding: 20px 20px 0px 20px;
 }
 
 .user{
@@ -67,12 +67,14 @@
 
 .like{
     border: none;
-    background-color: #FFF1D6;
+    background-color: white;
     color: orange;
     margin: 5px;
     font-size: 20px;
     cursor: pointer;
     border-radius: 4px;
+    font-size: 15px;
+    padding: 5px;
 }
 
 .like:hover{
@@ -99,10 +101,36 @@
 .delete{
     color: red;
     cursor: pointer;
+    /* width: 100%; */
+    margin-left: 90%;
 }
 
 .content{
     border-bottom: 1px solid rgb(201, 201, 201);
     padding-bottom: 10px;
     margin-bottom: 20px;
+}
+
+.cmmnt_cont{
+    margin: 10px 0px 0px 0px;
+}
+
+.cmmnt{
+    padding: 5px 10px;
+   
+    width: 40%;
+    border: 2px solid orange;
+    border-radius: 50px;
+    color: rgb(102, 102, 102);
+    /* vertical-align: middle */
+}
+
+.send{
+    background-color: white;
+    color: orange;
+    border: none;
+    font-size: 30px;
+    vertical-align: middle;
+    cursor: pointer;
+    /* margin: 10px 0px 0px 0px; */
 }
