--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px white; 
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: #FFF1D6; 
+  -webkit-box-shadow: inset 0 0 6px rgb(255, 199, 96); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgb(255, 199, 96); 
+}
+
