--- a/src/container/Full/Full.module.css
+++ b/src/container/Full/Full.module.css
@@ -29,9 +29,10 @@
 }
 
 .title{
-    margin: 20px 5px;
+    margin: 0px 5px;
     margin-right: auto;
-    font-size: 1.2em;
+    font-size: 1.4em;
+    font-weight: bold;
 }
 
 .body{
